# dining-philosophers-v1

./: CMakeLists.txt  action.cpp  action.h  condition.h  file.cpp  file.h  fork.cpp  fork.h  key.cpp  key.h  keypressedcondition.cpp  keypressedcondition.h  main.cpp  philosopher.cpp  philosopher.h  philosopherstatus.cpp  philosopherstatus.h
curses/: cursescolorpair.cpp  cursescolorpair.h  curseshud.cpp  curseshud.h  cursesobject.cpp  cursesobject.h  cursesprogressbar.cpp  cursesprogressbar.h  cursesterminal.cpp  cursesterminal.h  cursestext.cpp  cursestext.h
resources/text-graphics/: fork-1.txt  fork-2.txt  fork-3.txt  fork-4.txt  fork-5.txt  philosopher-1.txt  philosopher-2.txt  philosopher-3.txt  philosopher-4.txt  philosopher-5.txt  table.txt
